[gd_scene load_steps=13 format=3 uid="uid://dtyskoehpex5"]

[ext_resource type="Texture2D" uid="uid://h7iypwwtf5vr" path="res://Screenshot 2025-09-27 at 1.18.54â€¯PM.png" id="1_0ufvy"]
[ext_resource type="Script" uid="uid://dwnd4jqcijo48" path="res://main_menu_2.gd" id="1_cb1tg"]
[ext_resource type="FontFile" uid="uid://dh8q4ai8f284r" path="res://annabel/annabel 1.ttf" id="2_w43j7"]
[ext_resource type="Texture2D" uid="uid://bp10i28s0nu6m" path="res://things bananas/1.png" id="4_cb1tg"]
[ext_resource type="Texture2D" uid="uid://c8pb7k4vnkx8x" path="res://things bananas/2025_09_27_0nm_Kleki.png" id="4_oaqnn"]
[ext_resource type="FontFile" uid="uid://dffmuedamie5q" path="res://dogica/OTF/dogicabold.otf" id="5_v5leg"]
[ext_resource type="AudioStream" uid="uid://bdechr3ei520b" path="res://704972__neartheatmoshphere__lounge-piano-loop.wav" id="6_cnayg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w43j7"]
texture = ExtResource("1_0ufvy")
modulate_color = Color(0.4332657, 0.43326563, 0.43326563, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bvaut"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oaqnn"]
bg_color = Color(0.32729906, 0.32729906, 0.32729903, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cb1tg"]
bg_color = Color(0.34968925, 0.34968933, 0.3496893, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cnayg"]

[node name="MainMenu2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cb1tg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_w43j7")

[node name="Man" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -76.99994
offset_top = -671.0
offset_right = 1092.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.92051697, 0.9269533)
texture = ExtResource("4_oaqnn")

[node name="Woman" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -369.0
offset_top = -591.0
offset_right = 800.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.9219001, 0.88715404)
texture = ExtResource("4_cb1tg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -497.0
offset_top = -71.0
offset_right = -146.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_v5leg")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_bvaut")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oaqnn")
theme_override_styles/hover = SubResource("StyleBoxFlat_cb1tg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cnayg")
text = "Start Game
"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_v5leg")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_bvaut")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oaqnn")
theme_override_styles/hover = SubResource("StyleBoxFlat_cb1tg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cnayg")
text = "Options
"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_v5leg")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_bvaut")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oaqnn")
theme_override_styles/hover = SubResource("StyleBoxFlat_cb1tg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cnayg")
text = "Quit
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 76.0
offset_top = -274.0
offset_right = 809.0
offset_bottom = -71.0
grow_vertical = 2
scale = Vector2(0.8399997, 0.8399997)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.6627451)
theme_override_fonts/font = ExtResource("2_w43j7")
theme_override_font_sizes/font_size = 100
text = "Love's 
Golden Toll"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits" type="Label" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 553.0
offset_right = 378.0
offset_bottom = 628.0
text = "Lead Designer: Ava Bisset
Lead Programmer: Zoe Bisset
v.20"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_cnayg")
autoplay = true

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
